tests/NormalTests/paczka2/big_fuzzy/58494971.err
Error in line 14: A351 S832 64,16
Error in line 15: fcK000g S832 86,2
Error in line 18: bOH A351 32,8
Error in line 19: DtkBWzwF A351 75,3
Error in line 24: 4MBxSymc S832 0,7
Error in line 28: fcK000g S513 71,6
Error in line 27: 4MBxSymc S194 99,9
Error in line 41: wl4M7ELjUm A351 89,8
Error in line 36: fcK000g A351 31,8
Error in line 52: wl4M7ELjUm S832 69,0
Error in line 58: wl4M7ELjUm S513 87,7
Error in line 73: nqUyz S194 118,1
Error in line 63: fcK000g S513 52,6
Error in line 83: nqUyz S513 74,96
Error in line 88: wl4M7ELjUm  513 38,2
Error in line 86: DtkBWzwF A351 202,9
Error in line 95: fcK000g S194 76,0
Error in line 74: wl4M7ELjUm S513 25,3
Error in line 111: fcK000g S832 16,9
Error in line 113: A351 A351 60,6
Error in line 120: nqUyz S513 1,2
Error in line 124: nqUyz S832 69,0
Error in line 125: nqUyz S513 1,7
Error in line 134: DtkBWzwF S513 291,1
Error in line 136: DtkBWzwF S832 81,2
Error in line 138: DtkBWzwF S513 86,7
Error in line 135: fcK000g S832 9,0
Error in line 144: fcK000g A351 87,2
Error in line 148: A351 S194 46,8
Error in line 149: A351 S513 25,8
Error in line 164: fcK000g S832 15,2
Error in line 170: fcK000g A351 28,6
Error in line 173: wl4M7ELjUm S513 31,0
Error in line 163: A351 S832 130,1
Error in line 183: A351 S194 8,8
Error in line 190: A351 S832 35,5
Error in line 174: fcK000g S513 59,4
Error in line 194: fcK000g S832 83,2
Error in line 196: fcK000g S513 82,9
Error in line 210: A351 S513 21,4
Error in line 212: wl4M7ELjUm S832 80,5
Error in line 230: DtkBWzwF A3E1 36,7
Error in line 220: DtkBWzwF S832 32,9
